feat: Implemented a route for retrieve barbers information
